--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tui-logger"
-version = "0.9.4"
+version = "0.9.5"
 authors = ["Jochen Kiemes <jochen@kiemes.de>"]
 edition = "2021"
 license = "MIT"
@@ -25,8 +25,11 @@ fxhash = "0.2"
 parking_lot = "0.12"
 slog = { version = "2.7.0", optional = true }
 
+# Optional features for demo. Unfortunately cannot move to dep-dependencies
+termion = {version = "1.5", optional = true }
+crossterm = {version = "0.27", optional = true }
+
 [dev-dependencies]
-termion = "1.5"
 env_logger = "0.10.0"
 
 [features]
@@ -37,7 +40,7 @@ ratatui-support = ["ratatui"]
 tracing-support = ["tracing", "tracing-subscriber"]
 
 # This features are exclusively used by examples/demo.rs
-examples-tui-termion = ["tui/termion"]
-examples-tui-crossterm = ["tui/crossterm"]
-examples-ratatui-termion = ["ratatui/termion"]
-examples-ratatui-crossterm = ["ratatui/crossterm"]
+examples-tui-termion = ["termion", "tui/termion"]
+examples-tui-crossterm = ["crossterm", "tui/crossterm"]
+examples-ratatui-termion = ["termion", "ratatui/termion"]
+examples-ratatui-crossterm = ["crossterm", "ratatui/crossterm"]
